fix the truncation of the dropdown tabs

--- a/packages/quantic/force-app/main/default/lwc/quanticTabBar/quanticTabBar.css
+++ b/packages/quantic/force-app/main/default/lwc/quanticTabBar/quanticTabBar.css
@@ -1,6 +1,7 @@
 .tab-bar_list-container {
   /* Prevents horizontal scrollbar from appearing when tabs overflow */
   overflow-x: clip;
+  display: inline;
 }
 
 .tab-bar_dropdown {
